new change in image

--- a/myproject/templete/core/index.html
+++ b/myproject/templete/core/index.html
@@ -27,10 +27,10 @@
   <!-- 
     - preload images
   -->
-  <link rel="preload" as="image" href="./assets/images/logo.png">
-  <link rel="preload" as="image" href="./assets/images/hero-banner-1.jpg">
-  <link rel="preload" as="image" href="./assets/images/hero-banner-2.jpg">
-  <link rel="preload" as="image" href="./assets/images/hero-banner-3.jpg">
+  <link rel="preload" as="image" href="./static/media_files/logo.png">
+  <link rel="preload" as="image" href="./static/media_files/hero-banner-1.jpg">
+  <link rel="preload" as="image" href="./static/media_files/hero-banner-2.jpg">
+  <link rel="preload" as="image" href="./static/media_files/hero-banner-3.jpg">
 
 </head>
 
@@ -204,7 +204,7 @@
 
                   <p class="price">Starting at 99.99</p>
 
-                  <a href="#" class="btn btn-primary">Shop Now</a>
+                  <a href="/product_page/" class="btn btn-primary">Shop Now</a>
 
                 </div>
 
@@ -227,7 +227,7 @@
 
                   <p class="price">Starting at $7.99</p>
 
-                  <a href="#" class="btn btn-primary">Shop Now</a>
+                  <a href="/product_page/" class="btn btn-primary">Shop Now</a>
 
                 </div>
 
@@ -250,7 +250,7 @@
 
                   <p class="price">Starting at $7.99</p>
 
-                  <a href="#" class="btn btn-primary">Shop Now</a>
+                  <a href="/product_page/" class="btn btn-primary">Shop Now</a>
 
                 </div>
 
