--- a/myproject/templete/core/index.html
+++ b/myproject/templete/core/index.html
@@ -391,6 +391,7 @@
 
             <ul class="has-scrollbar">
               {% for i in p_deatil %}
+              {% if i.product_main == 1 %}
 
               <li class="scrollbar-item">
                 <div class="shop-card">
@@ -448,7 +449,7 @@
                   </div>
                 </div>
               </li>
-
+              {% endif %}
               {% endfor %}
             </ul>
           </div>
@@ -457,7 +458,7 @@
         <section class="section shop" id="shop" aria-label="shop" data-section>
           <div class="container">
             <div class="title-wrapper">
-              <h2 class="h2 section-title">Under $25</h2>
+              <h2 class="h2 section-title">Port Collection</h2>
 
               <a href="#" class="btn-link">
                 <span class="span">Shop All Products</span>
@@ -467,6 +468,8 @@
             </div>
 
             <ul class="has-scrollbar">
+              {% for i in p_deatil %}
+              {% if i.product_type == "port" %}
               <li class="scrollbar-item">
                 <div class="shop-card">
                   <div
@@ -474,7 +477,7 @@
                     style="--width: 540; --height: 720"
                   >
                     <img
-                      src="./static/media_files/product-07.jpg"
+                      src="{{i.product_image}}"
                       width="540"
                       height="720"
                       loading="lazy"
@@ -482,7 +485,7 @@
                       class="img-cover"
                     />
 
-                    <span class="badge" aria-label="20% off">-20%</span>
+                    <span class="badge" aria-label="20% off">-{{i.product_discount}}%</span>
 
                     <div class="card-actions">
                       <button class="action-btn" aria-label="add to cart">
@@ -510,29 +513,169 @@
 
                   <div class="card-content">
                     <div class="price">
-                      <del class="del">$39.00</del>
+                      <del class="del">{{i.product_price}}</del>
 
-                      <span class="span">$29.00</span>
+                      <span class="span">{{i.product_price}}</span>
                     </div>
 
                     <h3>
-                      <a href="#" class="card-title">Facial cleanser</a>
+                      <a href="#" class="card-title">{{i.product_name}}</a>
                     </h3>
-
-                    <div class="card-rating">
-                      <div class="rating-wrapper" aria-label="5 start rating">
-                        <ion-icon name="star" aria-hidden="true"></ion-icon>
-                        <ion-icon name="star" aria-hidden="true"></ion-icon>
-                        <ion-icon name="star" aria-hidden="true"></ion-icon>
-                        <ion-icon name="star" aria-hidden="true"></ion-icon>
-                        <ion-icon name="star" aria-hidden="true"></ion-icon>
-                      </div>
-
-                      <p class="rating-text">5170 reviews</p>
-                    </div>
                   </div>
                 </div>
               </li>
+              {% endif %}
+              {% endfor %}
+            </ul>
+          </div>
+        </section>
+
+        <section class="section shop" id="shop" aria-label="shop" data-section>
+          <div class="container">
+            <div class="title-wrapper">
+              <h2 class="h2 section-title">Cup-Crockery Collection</h2>
+
+              <a href="#" class="btn-link">
+                <span class="span">Shop All Products</span>
+
+                <ion-icon name="arrow-forward" aria-hidden="true"></ion-icon>
+              </a>
+            </div>
+
+            <ul class="has-scrollbar">
+              {% for i in p_deatil %}
+              {% if i.product_type == "cupcrocary" %}
+              <li class="scrollbar-item">
+                <div class="shop-card">
+                  <div
+                    class="card-banner img-holder"
+                    style="--width: 540; --height: 720"
+                  >
+                    <img
+                      src="{{i.product_image}}"
+                      width="540"
+                      height="720"
+                      loading="lazy"
+                      alt="Facial cleanser"
+                      class="img-cover"
+                    />
+
+                    <span class="badge" aria-label="20% off">-{{i.product_discount}}%</span>
+
+                    <div class="card-actions">
+                      <button class="action-btn" aria-label="add to cart">
+                        <ion-icon
+                          name="bag-handle-outline"
+                          aria-hidden="true"
+                        ></ion-icon>
+                      </button>
+
+                      <button class="action-btn" aria-label="add to whishlist">
+                        <ion-icon
+                          name="star-outline"
+                          aria-hidden="true"
+                        ></ion-icon>
+                      </button>
+
+                      <button class="action-btn" aria-label="compare">
+                        <ion-icon
+                          name="repeat-outline"
+                          aria-hidden="true"
+                        ></ion-icon>
+                      </button>
+                    </div>
+                  </div>
+
+                  <div class="card-content">
+                    <div class="price">
+                      <del class="del">{{i.product_price}}</del>
+
+                      <span class="span">{{i.product_price}}</span>
+                    </div>
+
+                    <h3>
+                      <a href="#" class="card-title">{{i.product_name}}</a>
+                    </h3>
+                  </div>
+                </div>
+              </li>
+              {% endif %}
+              {% endfor %}
+            </ul>
+          </div>
+        </section>
+
+        <section class="section shop" id="shop" aria-label="shop" data-section>
+          <div class="container">
+            <div class="title-wrapper">
+              <h2 class="h2 section-title">Home Decoration</h2>
+
+              <a href="#" class="btn-link">
+                <span class="span">Shop All Products</span>
+
+                <ion-icon name="arrow-forward" aria-hidden="true"></ion-icon>
+              </a>
+            </div>
+
+            <ul class="has-scrollbar">
+              {% for i in p_deatil %}
+              {% if i.product_type == "home" %}
+              <li class="scrollbar-item">
+                <div class="shop-card">
+                  <div
+                    class="card-banner img-holder"
+                    style="--width: 540; --height: 720"
+                  >
+                    <img
+                      src="{{i.product_image}}"
+                      width="540"
+                      height="720"
+                      loading="lazy"
+                      alt="Facial cleanser"
+                      class="img-cover"
+                    />
+
+                    <span class="badge" aria-label="20% off">-{{i.product_discount}}%</span>
+
+                    <div class="card-actions">
+                      <button class="action-btn" aria-label="add to cart">
+                        <ion-icon
+                          name="bag-handle-outline"
+                          aria-hidden="true"
+                        ></ion-icon>
+                      </button>
+
+                      <button class="action-btn" aria-label="add to whishlist">
+                        <ion-icon
+                          name="star-outline"
+                          aria-hidden="true"
+                        ></ion-icon>
+                      </button>
+
+                      <button class="action-btn" aria-label="compare">
+                        <ion-icon
+                          name="repeat-outline"
+                          aria-hidden="true"
+                        ></ion-icon>
+                      </button>
+                    </div>
+                  </div>
+
+                  <div class="card-content">
+                    <div class="price">
+                      <del class="del">{{i.product_price}}</del>
+
+                      <span class="span">{{i.product_price}}</span>
+                    </div>
+
+                    <h3>
+                      <a href="#" class="card-title">{{i.product_name}}</a>
+                    </h3>
+                  </div>
+                </div>
+              </li>
+              {% endif %}
+              {% endfor %}
             </ul>
           </div>
         </section>
