--- a/myproject/templete/core/cart.html
+++ b/myproject/templete/core/cart.html
@@ -15,7 +15,7 @@
   <!-- 
     - custom css link
   -->
-  <link rel="stylesheet" href="/static/css_files/product.css">
+  <link rel="stylesheet" href="/static/css_files/cart.css">
 
 
   <!-- 
@@ -98,6 +98,7 @@
                 aria-hidden="true"
               ></ion-icon>
             </a>
+
 
             <span class="btn-badge">0</span>
           </button>
