--- a/myproject/templete/core/index.html
+++ b/myproject/templete/core/index.html
@@ -9,12 +9,12 @@
     <!-- 
     - favicon
   -->
-    <link rel="shortcut icon" href="./static/media_files/main_logo.jpg" />
+    <link rel="shortcut icon" href="/static/media_files/main_logo.jpg" />
 
     <!-- 
     - custom css link
   -->
-    <link rel="stylesheet" href="./static/css_files/style.css" />
+    <link rel="stylesheet" href="/static/css_files/style.css" />
 
     <!-- 
     - google font link
@@ -33,17 +33,17 @@
     <link
       rel="preload"
       as="image"
-      href="./static/media_files/hero-banner-1.jpg"
+      href="/static/media_files/hero-banner-1.jpg"
     />
     <link
       rel="preload"
       as="image"
-      href="./static/media_files/hero-banner-2.jpg"
+      href="/static/media_files/hero-banner-2.jpg"
     />
     <link
       rel="preload"
       as="image"
-      href="./static/media_files/hero-banner-3.jpg"
+      href="/static/media_files/hero-banner-3.jpg"
     />
   </head>
 
@@ -82,7 +82,7 @@
 
           <a href="#" class="logo">
             <img
-              src="./static/media_files/logo.png"
+              src="/static/media_files/logo.png"
               width="179"
               height="26"
               alt="Glowing"
@@ -94,17 +94,20 @@
             <ion-icon name="person-outline" aria-hidden="true" aria-hidden="true"></ion-icon>
           </button> -->
 
+            <a href="/wishlist_page/">
             <button class="header-action-btn" aria-label="favourite item">
               <ion-icon
                 name="star-outline"
                 aria-hidden="true"
                 aria-hidden="true"
               ></ion-icon>
+             </a>
 
               <span class="btn-badge">0</span>
             </button>
 
-            <button class="header-action-btn" aria-label="cart item">
+            <a href="/cart_page/">
+            <button  class="header-action-btn" aria-label="cart item">
               <!-- <data class="btn-text" value="0">$0.00</data> -->
 
               <ion-icon
@@ -112,6 +115,7 @@
                 aria-hidden="true"
                 aria-hidden="true"
               ></ion-icon>
+            </a>
 
               <span class="btn-badge">0</span>
             </button>
@@ -155,7 +159,7 @@
         <div class="wrapper">
           <a href="#" class="logo">
             <img
-              src="./static/media_files/logo.png"
+              src="/static/media_files/logo.png"
               width="179"
               height="26"
               alt="Glowing"
@@ -211,7 +215,7 @@
               <li class="scrollbar-item">
                 <div
                   class="hero-card has-bg-image"
-                  style="background-image: url('./static/media_files/h-1.jpg')"
+                  style="background-image: url('/static/media_files/h-1.jpg')"
                 >
                   <div class="card-content">
                     <h1 class="h1 hero-title">
@@ -236,7 +240,7 @@
               <li class="scrollbar-item">
                 <div
                   class="hero-card has-bg-image"
-                  style="background-image: url('./static/media_files/h-2.jpg')"
+                  style="background-image: url('/static/media_files/h-2.jpg')"
                 >
                   <div class="card-content">
                     <h1 class="h1 hero-title">
@@ -261,7 +265,7 @@
               <li class="scrollbar-item">
                 <div
                   class="hero-card has-bg-image"
-                  style="background-image: url('./static/media_files/h-3.jpg')"
+                  style="background-image: url('/static/media_files/h-3.jpg')"
                 >
                   <div class="card-content">
                     <h1 class="h1 hero-title">
@@ -304,7 +308,7 @@
 
                   <p class="card-text">Starting at just 99.99</p>
 
-                  <a href="#" class="btn-link">
+                  <a href="/product_page/" class="btn-link">
                     <span class="span">Shop Now</span>
 
                     <ion-icon
@@ -316,7 +320,7 @@
                   <div
                     class="has-bg-image"
                     style="
-                      background-image: url('./static/media_files/c-1.jpg');
+                      background-image: url('/static/media_files/c-1.jpg');
                     "
                   ></div>
                 </div>
@@ -328,7 +332,7 @@
 
                   <p class="card-text">Starting at just 99.99</p>
 
-                  <a href="#" class="btn-link">
+                  <a href="/product_page/" class="btn-link">
                     <span class="span">Shop Now</span>
 
                     <ion-icon
@@ -340,7 +344,7 @@
                   <div
                     class="has-bg-image"
                     style="
-                      background-image: url('./static/media_files/c-2.jpg');
+                      background-image: url('/static/media_files/c-2.jpg');
                     "
                   ></div>
                 </div>
@@ -352,7 +356,7 @@
 
                   <p class="card-text">Starting at 99.99</p>
 
-                  <a href="#" class="btn-link">
+                  <a href="/product_page/" class="btn-link">
                     <span class="span">Shop Now</span>
 
                     <ion-icon
@@ -364,7 +368,7 @@
                   <div
                     class="has-bg-image"
                     style="
-                      background-image: url('./static/media_files/c-3.jpg');
+                      background-image: url('/static/media_files/c-3.jpg');
                     "
                   ></div>
                 </div>
@@ -382,7 +386,7 @@
             <div class="title-wrapper">
               <h2 class="h2 section-title">Our Bestsellers</h2>
 
-              <a href="#" class="btn-link">
+              <a href="/product_page/" class="btn-link">
                 <span class="span">Shop All Products</span>
 
                 <ion-icon name="arrow-forward" aria-hidden="true"></ion-icon>
@@ -400,7 +404,7 @@
                     style="--width: 540; --height: 720"
                   >
                     <img
-                      src="{{i.product_image}}"
+                      src="/{{i.product_image}}"
                       width="540"
                       height="720"
                       loading="lazy"
@@ -460,7 +464,7 @@
             <div class="title-wrapper">
               <h2 class="h2 section-title">Port Collection</h2>
 
-              <a href="#" class="btn-link">
+              <a href="/product_page/" class="btn-link">
                 <span class="span">Shop All Products</span>
 
                 <ion-icon name="arrow-forward" aria-hidden="true"></ion-icon>
@@ -477,7 +481,7 @@
                     style="--width: 540; --height: 720"
                   >
                     <img
-                      src="{{i.product_image}}"
+                      src="/{{i.product_image}}"
                       width="540"
                       height="720"
                       loading="lazy"
@@ -535,7 +539,7 @@
             <div class="title-wrapper">
               <h2 class="h2 section-title">Cup-Crockery Collection</h2>
 
-              <a href="#" class="btn-link">
+              <a href="/product_page/" class="btn-link">
                 <span class="span">Shop All Products</span>
 
                 <ion-icon name="arrow-forward" aria-hidden="true"></ion-icon>
@@ -552,7 +556,7 @@
                     style="--width: 540; --height: 720"
                   >
                     <img
-                      src="{{i.product_image}}"
+                      src="/{{i.product_image}}"
                       width="540"
                       height="720"
                       loading="lazy"
@@ -610,7 +614,7 @@
             <div class="title-wrapper">
               <h2 class="h2 section-title">Home Decoration</h2>
 
-              <a href="#" class="btn-link">
+              <a href="/product_page/" class="btn-link">
                 <span class="span">Shop All Products</span>
 
                 <ion-icon name="arrow-forward" aria-hidden="true"></ion-icon>
@@ -627,7 +631,7 @@
                     style="--width: 540; --height: 720"
                   >
                     <img
-                      src="{{i.product_image}}"
+                      src="/{{i.product_image}}"
                       width="540"
                       height="720"
                       loading="lazy"
@@ -693,7 +697,7 @@
           <div class="container">
             <figure class="offer-banner">
               <img
-                src="./static/media_files/c-1.jpg"
+                src="/static/media_files/c-1.jpg"
                 width="305"
                 height="408"
                 loading="lazy"
@@ -702,7 +706,7 @@
               />
 
               <img
-                src="./static/media_files/h-1.jpg"
+                src="/static/media_files/h-1.jpg"
                 width="450"
                 height="625"
                 loading="lazy"
@@ -731,7 +735,7 @@
                 <span class="time" aria-label="seconds">08</span>
               </div>
 
-              <a href="#" class="btn btn-primary">Order Now</a>
+              <a href="/product_page/" class="btn btn-primary">Order Now</a>
             </div>
           </div>
         </section>
@@ -752,7 +756,7 @@
                     style="--width: 700; --height: 450"
                   >
                     <img
-                      src="./static/media_files/blog-1.jpg"
+                      src="/static/media_files/blog-1.jpg"
                       width="700"
                       height="450"
                       loading="lazy"
@@ -783,7 +787,7 @@
                     style="--width: 700; --height: 450"
                   >
                     <img
-                      src="./static/media_files/blog-2.jpg"
+                      src="/static/media_files/blog-2.jpg"
                       width="700"
                       height="450"
                       loading="lazy"
@@ -814,7 +818,7 @@
                     style="--width: 700; --height: 450"
                   >
                     <img
-                      src="./static/media_files/blog-3.jpg"
+                      src="/static/media_files/blog-3.jpg"
                       width="700"
                       height="450"
                       loading="lazy"
@@ -973,7 +977,7 @@
 
           <a href="#" class="logo">
             <img
-              src="./static/media_files/logo.png"
+              src="/static/media_files/logo.png"
               width="179"
               height="26"
               loading="lazy"
@@ -1000,7 +1004,7 @@
     <!-- 
     - custom js link
   -->
-    <script src="./static/javascript_files/script.js" defer></script>
+    <script src="/static/javascript_files/script.js" defer></script>
 
     <!-- 
     - ionicon link
