--- a/myproject/templete/core/index.html
+++ b/myproject/templete/core/index.html
@@ -119,6 +119,12 @@
 
               <span class="btn-badge">0</span>
             </button>
+
+            <a href="/logout/">
+             <button class="header-action-btn" aria-label="user">
+            <ion-icon name="person-outline" aria-hidden="true" aria-hidden="true"></ion-icon>
+          </button>
+          </a>
           </div>
 
           <nav class="navbar">
@@ -415,7 +421,8 @@
                     <span class="badge" aria-label="20% off"
                       >-{{i.product_discount}}%</span
                     >
-
+                    
+                    <a href="/cart/">
                     <div class="card-actions">
                       <button class="action-btn" aria-label="add to cart">
                         <ion-icon
@@ -423,20 +430,16 @@
                           aria-hidden="true"
                         ></ion-icon>
                       </button>
+                    </a>
 
+                      <a href="/wishlist/">
                       <button class="action-btn" aria-label="add to whishlist">
                         <ion-icon
                           name="star-outline"
                           aria-hidden="true"
                         ></ion-icon>
                       </button>
-
-                      <button class="action-btn" aria-label="compare">
-                        <ion-icon
-                          name="repeat-outline"
-                          aria-hidden="true"
-                        ></ion-icon>
-                      </button>
+                      </a>
                     </div>
                   </div>
 
@@ -492,26 +495,24 @@
                     <span class="badge" aria-label="20% off">-{{i.product_discount}}%</span>
 
                     <div class="card-actions">
+                      <a href="/cart/">
                       <button class="action-btn" aria-label="add to cart">
                         <ion-icon
                           name="bag-handle-outline"
                           aria-hidden="true"
                         ></ion-icon>
                       </button>
+                      </a>
 
+                      <a href="/wishlist/">
                       <button class="action-btn" aria-label="add to whishlist">
                         <ion-icon
                           name="star-outline"
                           aria-hidden="true"
                         ></ion-icon>
                       </button>
+                      </a>
 
-                      <button class="action-btn" aria-label="compare">
-                        <ion-icon
-                          name="repeat-outline"
-                          aria-hidden="true"
-                        ></ion-icon>
-                      </button>
                     </div>
                   </div>
 
@@ -567,26 +568,24 @@
                     <span class="badge" aria-label="20% off">-{{i.product_discount}}%</span>
 
                     <div class="card-actions">
+                      <a href="/cart/">
                       <button class="action-btn" aria-label="add to cart">
                         <ion-icon
                           name="bag-handle-outline"
                           aria-hidden="true"
                         ></ion-icon>
                       </button>
+                      </a>
 
+                      <a href="/wishlist/">
                       <button class="action-btn" aria-label="add to whishlist">
                         <ion-icon
                           name="star-outline"
                           aria-hidden="true"
                         ></ion-icon>
                       </button>
+                      </a>
 
-                      <button class="action-btn" aria-label="compare">
-                        <ion-icon
-                          name="repeat-outline"
-                          aria-hidden="true"
-                        ></ion-icon>
-                      </button>
                     </div>
                   </div>
 
@@ -642,26 +641,24 @@
                     <span class="badge" aria-label="20% off">-{{i.product_discount}}%</span>
 
                     <div class="card-actions">
+                      <a href="/cart/">
                       <button class="action-btn" aria-label="add to cart">
                         <ion-icon
                           name="bag-handle-outline"
                           aria-hidden="true"
                         ></ion-icon>
                       </button>
+                      </a>
 
+                      <a href="/wishlist/">
                       <button class="action-btn" aria-label="add to whishlist">
                         <ion-icon
                           name="star-outline"
                           aria-hidden="true"
                         ></ion-icon>
                       </button>
+                      </a>
 
-                      <button class="action-btn" aria-label="compare">
-                        <ion-icon
-                          name="repeat-outline"
-                          aria-hidden="true"
-                        ></ion-icon>
-                      </button>
                     </div>
                   </div>
 
