--- a/myproject/templete/core/product.html
+++ b/myproject/templete/core/product.html
@@ -99,7 +99,12 @@
               ></ion-icon>
             </a>
 
-            <span class="btn-badge">0</span>
+            <a href="/logout/">
+              <button class="header-action-btn" aria-label="user">
+             <ion-icon name="person-outline" aria-hidden="true" aria-hidden="true"></ion-icon>
+           </button>
+           </a>
+
           </button>
 
         </div>
@@ -209,11 +214,14 @@
               <div style="position: relative; width: 100%; padding-top: 100%; overflow: hidden;">
                 <img src="/{{i.product_image}}" alt="{{i.product_name}}" style="position: absolute; top: 0; left: 0; width: 100%; height: 100%; object-fit: cover;" />
                 <div  class="badge" style="position: absolute; top: 10px; left: 10px; padding: 5px;">-{{i.product_discount}}%</div>
+                <a href="/cart/">
                 <button class="badge" style="position: absolute; top: 10px; right: 10px; background: hsl(148, 20%, 38%); border: none; color: white; height: 10%;">
                   <ion-icon
                   name="bag-handle-outline"
                   aria-hidden="true"
                 ></ion-icon>
+                </a>
+                <a href="/wishlist/">
                 </button>
                 <button class="badge" style="position: absolute; top: 40px; right: 10px; background: hsl(148, 20%, 38%); border: none; color: white; height: 10%; margin-top: 5%;">
                   <ion-icon
@@ -221,6 +229,7 @@
                   aria-hidden="true"
                 ></ion-icon>
                 </button>
+                </a>
               </div>
               <div style="text-align: center;">
                 <div style="color: #555; text-decoration: line-through;">{{i.product_price}}</div>
