--- a/myproject/templete/core/wishlist.html
+++ b/myproject/templete/core/wishlist.html
@@ -99,8 +99,13 @@
               ></ion-icon>
             </a>
 
+            <a href="/logout/">
+              <button class="header-action-btn" aria-label="user">
+             <ion-icon name="person-outline" aria-hidden="true" aria-hidden="true"></ion-icon>
+           </button>
+           </a>
 
-            <span class="btn-badge">0</span>
+
           </button>
 
         </div>
@@ -200,7 +205,7 @@
        <section class="section shop" id="shop" aria-label="shop" data-section>
         <div class="container" style="width: 100%;">
           <div class="title-wrapper">
-            <h2 class="h2 section-title" style="text-align: center;">All Products</h2>
+            <h2 class="h2 section-title" style="text-align: center;">Wishlist Products</h2>
           </div>
       
           <div style="display: flex; flex-wrap: wrap; justify-content: space-between;">
@@ -209,18 +214,6 @@
               <div style="position: relative; width: 100%; padding-top: 100%; overflow: hidden;">
                 <img src="/{{i.product_image}}" alt="{{i.product_name}}" style="position: absolute; top: 0; left: 0; width: 100%; height: 100%; object-fit: cover;" />
                 <div  class="badge" style="position: absolute; top: 10px; left: 10px; padding: 5px;">-{{i.product_discount}}%</div>
-                <button class="badge" style="position: absolute; top: 10px; right: 10px; background: hsl(148, 20%, 38%); border: none; color: white; height: 10%;">
-                  <ion-icon
-                  name="bag-handle-outline"
-                  aria-hidden="true"
-                ></ion-icon>
-                </button>
-                <button class="badge" style="position: absolute; top: 40px; right: 10px; background: hsl(148, 20%, 38%); border: none; color: white; height: 10%; margin-top: 5%;">
-                  <ion-icon
-                  name="star-outline"
-                  aria-hidden="true"
-                ></ion-icon>
-                </button>
               </div>
               <div style="text-align: center;">
                 <div style="color: #555; text-decoration: line-through;">{{i.product_price}}</div>
